--- a/views/pages/auth/signup.ejs
+++ b/views/pages/auth/signup.ejs
@@ -4,6 +4,7 @@
     <div class="row">
         <div class="col-md-6 my-5 m-auto">
             <div class="card card-body my-5">
+                <h3>create an Account</h3>
                 <form action="/auth/signup"  method="post">
                     <div class="form-group my-2">
                         <label for="username">provide your unique username</label>
@@ -26,6 +27,7 @@
                     </div>
                     
                 </form>
+                <a href="login" class="text-center my-3">have an Account?login here</a>
             </div>
         </div>
     </div>
