--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -10,10 +10,10 @@
             <a class="nav-link active" aria-current="page" href="#">Dashboard</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="/auth/login">login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#">pages</a>
+            <a class="nav-link " href="/auth/signup">signUp</a>
           </li>
         </ul>
         <form class="d-flex">
