--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -6,15 +6,23 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Dashboard</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/auth/login">login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link " href="/auth/signup">signUp</a>
-          </li>
+          
+          <% if(isLogedIn) {%>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/dashboard">Dashboard</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/auth/logout">logout</a>
+            </li>
+          <%}else {%>
+            <li class="nav-item">
+              <a class="nav-link" href="/auth/login">login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " href="/auth/signup">signUp</a>
+            </li>
+          <%}%>
+          
         </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
