--- a/views/playground/signup.ejs
+++ b/views/playground/signup.ejs
@@ -8,31 +8,22 @@
                 <form action="/playground/validator"  method="post">
                     <div class="form-group my-2">
                         <label for="username">provide your unique username</label>
-                        <input type="text" name="username" id="username" class="form-control <%= error.username ? 'is-invalid' : '' %>">
-                        <div class="invalid-feedback">
-                            <%= error.username %>
-                        </div>
+                        <input type="text" name="username" id="username" class="form-control ">
                     </div>
                     <div class="form-group my-2">
                         <label for="email">Enter your valid email</label>
-                        <input type="email" name="email" id="email" class="form-control <%= error.email ? 'is-invalid' : '' %>">
-                        <div class="invalid-feedback">
-                            <%= error.email && error.email %>
-                        </div>
+                        <input type="email" name="email" id="email" class="form-control ">
+                        
                     </div>
                     <div class="form-group my-2">
                         <label for="password">Your password</label>
-                        <input type="password" name="password" id="password" class="form-control <%= error.password ? 'is-invalid' : '' %>">
-                        <div class="invalid-feedback">
-                            <%= error.password && error.password %>
-                        </div>
+                        <input type="password" name="password" id="password" class="form-control ">
+                    
                     </div>
                     <div class="form-group my-2">
                         <label for="confirmPassword">confirm password</label>
-                        <input type="password" name="confirmPassword" id="confirmPassword" class="form-control <%= error.confirmPassword ? 'is-invalid' : '' %>">
-                        <div class="invalid-feedback">
-                            <%= error.confirmPassword && error.confirmPassword %>
-                        </div>
+                        <input type="password" name="confirmPassword" id="confirmPassword" class="form-control">
+                       
                     </div>
                     <div class="text-center">
                         <input type="submit" class="btn btn-primary" value="signUp">
