--- a/views/playground/play.ejs
+++ b/views/playground/play.ejs
@@ -5,14 +5,14 @@
         <div class="col-md-6 my-5 m-auto">
             <div class="card card-body my-5">
                 <h3>create an Account</h3>
-                <form action="/playground/validator" enctype="multipart/form-data" method="post">
+                <form action="/playground/play" enctype="multipart/form-data" method="post">
                     <div class="form-group my-2">
                         <label for="username">provide your unique username</label>
                         <input type="text" name="username" id="username" class="form-control ">
                     </div>
                     <div class="form-group my-2">
                         <label for="file">Choose your File</label>
-                        <input type="file" name="file" id="file" class="form-control ">
+                        <input type="file" name="picture" id="file" class="form-control ">
                         
                     </div>
                     <div class="">
